<resources>
    <string name="app_name">Dropbox</string>

    <string name="login">Log in</string>
    <string name="hi">Hi!</string>
    <string name="welcome">Shall we start now?</string>
    <string name="created">created by dK</string>

    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_second_screen">DropBox API</string>

    <string name="title_activity_read_text_file">ReadTextFile</string>
    <string name="title_activity_folder">Folder</string>
    <string name="edit">Edit</string>
    <string name="move">Move</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>

    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="sync">Sync</string>
    <string name="layout">Layout</string>

    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_upload">Upload</string>
    <string name="action_layout">Layout</string>
    <string name="action_logout">Logout</string>
</resources>
