<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login">

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_backup_white_24dp"
        android:title="@string/action_upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_layout"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/action_layout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />


</menu>
